--- a/Exercise -30/index.html
+++ b/Exercise -30/index.html
@@ -16,5 +16,6 @@
   <p id="p8">Paragraf 8</p>
   <p id="p9">Paragraf 9</p>
   <p id="p10">Paragraf 10</p>
+  <script src="script.js"></script>
 </body>
 </html>
