--- a/Exercise -31/index.html
+++ b/Exercise -31/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=">
   <title></title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="d1">1</div>
